--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Kalama Brian Ziro - Actuarial Student & Data Analyst">
     <meta property="og:description" content="Actuarial student & data analyst creating Django backends, data visualizations and production-ready APIs">
     <meta property="og:image" content="assets/images/Profile.jpg">
-    <meta property="og:url" content="https://brianziro.com">
+    <meta property="og:url" content="https://brianziroportfolio.netlify.app/">
     <meta name="twitter:card" content="summary_large_image">
     
     <title>Kalama Brian Ziro | Actuarial Student & Data Analyst</title>
